# WRAP

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt  wrap  wrap.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  update_formula.yml
app/: __main__.py  generic_typer_processor.py  requirements.txt  wrap.py
app/examples/: utils.py
app/examples/output/: call_person  get_current_time  give_cheese  list_issues  withargs  yarden
base_processors/: generic_argparse_processor.py
example1/input/: utils.py
example1/processors/: generic_argparse_processor.py
functions/: examples.py
functions2/: utils.py
loaders/: py.sh
