[tool.poetry]
name = "wrap"
description = "Generates 'wraps' for functions in any language using 'processors'"
authors = ["Yarden zamir <dev@yarden-zamir.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
click = '8.1.3'
requests = '2.28.2'
typer = '0.7.0'
urllib3 = '1.26.15'

[project.scripts]
wrap = "app.main:__main__"
